apps/media/sonarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-tls
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.k3s.besthomelab.tech`)
      kind: Rule
      services:
        - name: sonarr-service
          port: 8989
  tls: {}
